# libant

./: .gitignore  .gitmodules  CMakeLists.txt  CppProperties.json  LICENSE  README.md  ant.cpp  ant.h  automaton.h  buildspec.yml  checklist  grid.h  launch.vs.json  libant.h  libant.sln  libant.vcxproj  tasks.vs.json  winbuild.bat
.github/: FUNDING.yml
.github/workflows/: test.yml
ant/: ant.cpp  ant.h  ant_automaton.h
automaton/: automaton.h  la_automaton.h  la_game_of_life.h
automaton/ant/: ant_automaton.h  la_ant.h
automaton/scanning/: la_game_of_life.h  la_scanning_automaton.h
c/: antalgo.c  antalgo.h  anttype.c  anttype.h  libant.c  libant_test.c  makefile  test.c  tests
c/include/: ant.h  antalgo.h  antmacro.h  anttype.h  cell.h  grid.h  libant.h  quadtree.h  standards.h
c/src/: antalgo.c  anttype.c  grid.c
py/: gol_integrated.py  libant_py_def.c  libant_py_def.h  makefile  notes.txt  proto.py  quadtree.py  setup.py  win.bat
py/example/: data.py  gol.py  gol_integrated.py  triangles.py
py/include/: libant_grid.h  libant_grid_cartesian.h  libant_py_ant.h  libant_py_module.h  py_ant2.h  py_ant3.h  py_ant_2d_cartesian.h  py_langtons_ant.h
py/src/: libant_grid.c  libant_grid_cartesian.c  libant_py_ant.c  (+5 more)
quadtree/: node.h  quadtree.h
rule/: la_rule.h
spatial_structure/: cell.h  la_cell.h  la_matrix.h  la_spatial_structure.h  spatial_structure.h
test/: .gitignore  fixtures.h  packages.config  test.cpp  test.vcxproj  test_game_of_life.cpp  test_la_matrix.cpp  test_langtons_ant.cpp  test_quadtree.cpp  test_rule.cpp  test_spatial_structure.cpp
(+11 files in other folders)
